- Further support IISHP-13, IISHP-17, IISHP-18, IISHP-19. - Supports IISHP-15. - Refactored TLS parameter configuration and enforcement to utilize Ant tasks for processing + applying values. - Implemented Ant task wrappers around keytool invocations for generating all keys + certificates + key stores required for integration testing. - Refactored development IIS service to be available for development mode deployments (moved to main source tree). - Implemented initial (purely Spring configured, for now) destination registry.